memperbaiki ui dan menambahkan controller show serta route azisshow untuk show data

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -75,7 +75,7 @@ section {
   font-size: 3rem;
   font-weight: 700;
   background: linear-gradient(-45deg, #c28dcb, #9651a1);
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text; */
   -webkit-text-fill-color: transparent;
 }
 
@@ -195,7 +195,7 @@ section {
 
 .step .number {
   background: linear-gradient(-45deg, #1391a5, #274685);
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text; */
   -webkit-text-fill-color: transparent;
   font-weight: 700;
   letter-spacing: 0.2rem;
